--- a/Protótipo do site da FCT/gerirFormandos.html
+++ b/Protótipo do site da FCT/gerirFormandos.html
@@ -271,7 +271,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header gradient">
-            <h3>Dados do formando</h3>
+            <h3>Dados do Formando</h3>
             <button
               type="button"
               class="btn-close"
@@ -400,7 +400,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header gradient">
-            <h3>Dados do ecarregado de educação</h3>
+            <h3>Dados do Enc. Educação</h3>
             <button
               type="button"
               class="btn-close"
@@ -415,11 +415,11 @@
               class="form-control selectpicker"
               data-live-search="true"
             >
-              <option data-tokens="Gustavo">Gustavo</option>
-              <option data-tokens="Luís">Luís</option>
-              <option data-tokens="Pedro">Pedro</option>
-              <option data-tokens="Ricardo">Ricardo</option>
-              <option data-tokens="Rodrigo">Rodrigo</option>
+              <option data-tokens="gustavo">Gustavo</option>
+              <option data-tokens="luis">Luís</option>
+              <option data-tokens="pedro">Pedro</option>
+              <option data-tokens="ricardo">Ricardo</option>
+              <option data-tokens="rodrigo">Rodrigo</option>
             </select>
             <div class="divider"></div>
             <form>
@@ -474,7 +474,6 @@
                     type="email"
                     class="form-control"
                     placeholder="example@domain.com"
-                    required
                   />
                 </div>
               </div>
@@ -503,7 +502,7 @@
       <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
           <div class="modal-header gradient">
-            <h3>Dados do ecarregado de educação</h3>
+            <h3>Dados do Enc. Educação</h3>
             <button
               type="button"
               class="btn-close"
@@ -518,25 +517,25 @@
               class="form-control selectpicker"
               data-live-search="true"
             >
-              <option data-tokens="Gustavo">Gustavo</option>
-              <option data-tokens="Luís">Luís</option>
-              <option data-tokens="Pedro">Pedro</option>
-              <option data-tokens="Ricardo">Ricardo</option>
-              <option data-tokens="Rodrigo">Rodrigo</option>
+              <option data-tokens="gustavo">Gustavo</option>
+              <option data-tokens="luis">Luís</option>
+              <option data-tokens="pedro">Pedro</option>
+              <option data-tokens="ricardo">Ricardo</option>
+              <option data-tokens="rodrigo">Rodrigo</option>
             </select>
             <label for="editForForPicker" class="form-label mt-2"
-              >Ecarregado de Educação</label
+              >Enc. Educação</label
             >
             <select
               id="editForForPicker"
               class="form-control selectpicker"
               data-live-search="true"
             >
-              <option data-tokens="EE-Gustavo">João</option>
-              <option data-tokens="EE-Luís">Joaquim</option>
-              <option data-tokens="EE-Pedro">José</option>
-              <option data-tokens="EE-Ricardo">Joana</option>
-              <option data-tokens="EE-Rodrigo">Juliana</option>
+              <option data-tokens="ee-gustavo">João</option>
+              <option data-tokens="ee-luis">Joaquim</option>
+              <option data-tokens="ee-pedro">José</option>
+              <option data-tokens="ee-ricardo">Joana</option>
+              <option data-tokens="ee-rodrigo">Juliana</option>
             </select>
             <div class="divider"></div>
             <form>
@@ -591,7 +590,6 @@
                     type="email"
                     class="form-control"
                     placeholder="example@domain.com"
-                    required
                   />
                 </div>
               </div>
